# RenderDevice

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  cube.cpp  example.rc  image888.c  image888.h  textured_cube.cpp  triangle.cpp
include/render_device/: platform.h  render_device.h
source/: CMakeLists.txt  render_device.cpp
source/opengl/: ogl_render_device.cpp  ogl_render_device.h
source/platform/glfw/: glfw_platform.cpp
